force-app/main/default/objects/Concept_Note__c/Concept_Note__c.object-meta.xml
<CustomObject>
    <label>Concept Note</label>
    <nameField>
        <label>Concept Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concept Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>