force-app/main/default/objects/Concept_Note__c/fields/Assets_and_Non_Capitalised_Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets_and_Non_Capitalised_Assets__c</fullName>
    <inlineHelpText>Budget for Assets</inlineHelpText>
    <label>Assets and Non Capitalised Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>