force-app/main/default/objects/Concept_Note__c/fields/Behalf_Of_Field_Office_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Behalf_Of_Field_Office_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User to sign the agreement on behalf of Field Office</inlineHelpText>
    <label>Behalf Of Field Office Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Concept_Notes3</relationshipName>
    <type>Lookup</type>
</CustomField>