force-app/main/default/objects/Concept_Note__c/fields/Behalf_Of_Human_Appeal_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Behalf_Of_Human_Appeal_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User to sign the agreement on behalf of HA</inlineHelpText>
    <label>Behalf Of Human Appeal Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Concept_Notes2</relationshipName>
    <type>Lookup</type>
</CustomField>