force-app/main/default/objects/Concept_Note__c/fields/Budget_Limit__c.field-meta.xml
<CustomField>
    <fullName>Budget_Limit__c</fullName>
    <label>Budget cannot vary more then this</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>