force-app/main/default/objects/Concept_Note__c/fields/Consultancy__c.field-meta.xml
<CustomField>
    <fullName>Consultancy__c</fullName>
    <inlineHelpText>Expenditure on Consultancy</inlineHelpText>
    <label>Consultancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>