force-app/main/default/objects/Concept_Note__c/fields/Country_Director__c.field-meta.xml
<CustomField>
    <fullName>Country_Director__c</fullName>
    <inlineHelpText>Expenditure on Director</inlineHelpText>
    <label>Country Director</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>