force-app/main/default/objects/Concept_Note__c/fields/Desk_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Desk_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User looking after the concept note</inlineHelpText>
    <label>Desk Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Concept_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>