force-app/main/default/objects/Concept_Note__c/fields/Desk_Coordinator_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Desk_Coordinator_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User to sign the agreement on behalf of desk office</inlineHelpText>
    <label>Desk Coordinator Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Concept_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>