force-app/main/default/objects/Concept_Note__c/fields/Direct_Charitable_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Direct_Charitable_Expenditure__c</fullName>
    <label>Direct Charitable Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>