force-app/main/default/objects/Concept_Note__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Concept Notes</relationshipLabel>
    <relationshipName>Concept_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>