force-app/main/default/objects/Concept_Note__c/fields/Donor_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Donor_Feedback__c</fullName>
    <label>Donor Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>