force-app/main/default/objects/Concept_Note__c/fields/Draft_Grant_Agreement_Attached__c.field-meta.xml
<CustomField>
    <fullName>Draft_Grant_Agreement_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Grant Agreement Attached</label>
    <type>Checkbox</type>
</CustomField>