force-app/main/default/objects/Concept_Note__c/fields/Eversign_FO_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Eversign_FO_Document_Id__c</fullName>
    <inlineHelpText>Field Office Eversign Agreement Id</inlineHelpText>
    <label>Eversign FO Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>