force-app/main/default/objects/Concept_Note__c/fields/Exchange_Currency__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Currency__c</fullName>
    <label>Exchange Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>