force-app/main/default/objects/Concept_Note__c/fields/Exchange_Rate_to_GBP__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_to_GBP__c</fullName>
    <inlineHelpText>Exchange Rate Based on the Exchange currency selected</inlineHelpText>
    <label>Exchange Rate to GBP</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>