force-app/main/default/objects/Concept_Note__c/fields/Expected_Donor_Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Donor_Feedback_Date__c</fullName>
    <label>Expected Donor Feedback Date</label>
    <type>Date</type>
</CustomField>