force-app/main/default/objects/Concept_Note__c/fields/Expendable_Equipment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expendable_Equipment_Amount__c</fullName>
    <label>Expendable Equipment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>