force-app/main/default/objects/Concept_Note__c/fields/Expenditure_Items_GBP__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Items_GBP__c</fullName>
    <formula>Rent__c  +  Transportation__c  +  Utilities__c  +  Consultancy__c  +  Security__c  +  Remaining_Running_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Rent,Transportation,Utilities,Consultancy,Security,and Remaining Running Costs</inlineHelpText>
    <label>Expenditure Items GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>