force-app/main/default/objects/Concept_Note__c/fields/FA_Signatory_Donor__c.field-meta.xml
<CustomField>
    <fullName>FA_Signatory_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FA Signatory - Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Concept Notes</relationshipLabel>
    <relationshipName>Concept_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>