force-app/main/default/objects/Concept_Note__c/fields/Field_Office_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Office_Agreement_Status__c</fullName>
    <label>Field Office Agreement Signature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Eversign_Document_Status</valueSetName>
    </valueSet>
</CustomField>