force-app/main/default/objects/Concept_Note__c/fields/Final_Grant_Agreement_Attached__c.field-meta.xml
<CustomField>
    <fullName>Final_Grant_Agreement_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Grant Agreement Attached</label>
    <type>Checkbox</type>
</CustomField>