force-app/main/default/objects/Concept_Note__c/fields/FO_Person_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>FO_Person_in_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact Associated to the Implementation Partner</inlineHelpText>
    <label>FO Person in Charge</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Implementation_Partner__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Concept Notes (FO Person in Charge)</relationshipLabel>
    <relationshipName>Concept_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>