force-app/main/default/objects/Concept_Note__c/fields/FO_Support__c.field-meta.xml
<CustomField>
    <fullName>FO_Support__c</fullName>
    <label>FO Support %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>