force-app/main/default/objects/Concept_Note__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Funder</fullName>
            </value>
            <value>
                <fullName>Co-funded</fullName>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>