force-app/main/default/objects/Concept_Note__c/fields/Funds_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Funds_Allocated__c</fullName>
    <inlineHelpText>Sum of all the Fund allocated to Concept Note</inlineHelpText>
    <label>Funds Allocated</label>
    <summarizedField>Fund_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>Fund_Allocation__c.Concept_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>