force-app/main/default/objects/Concept_Note__c/fields/Head_of_Programmes_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Programmes_Project_Manager__c</fullName>
    <label>Head of Programmes/ Project Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>