force-app/main/default/objects/Concept_Note__c/fields/HQ_Programmes_Comments__c.field-meta.xml
<CustomField>
    <fullName>HQ_Programmes_Comments__c</fullName>
    <label>HQ Programmes Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>