force-app/main/default/objects/Concept_Note__c/fields/HR_Manager_Lead__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager_Lead__c</fullName>
    <label>HR Manager/ Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>