force-app/main/default/objects/Concept_Note__c/fields/Implementation_Partner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Field Office Account</inlineHelpText>
    <label>Implementation Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Concept Notes (Implementation Partner)</relationshipLabel>
    <relationshipName>Concept_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>