force-app/main/default/objects/Concept_Note__c/fields/In_Kind_Value_GBP__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Value_GBP__c</fullName>
    <label>In Kind Value (GBP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>