force-app/main/default/objects/Concept_Note__c/fields/Indirect_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Beneficiaries__c</fullName>
    <inlineHelpText>Sum of all indirect beneficiaries related to Concept Note</inlineHelpText>
    <label>Indirect Beneficiaries</label>
    <summarizedField>Beneficiaries__c.Sum_of_Beneficiaries__c</summarizedField>
    <summaryFilterItems>
        <field>Beneficiaries__c.Type__c</field>
        <operation>equals</operation>
        <value>Indirect</value>
    </summaryFilterItems>
    <summaryForeignKey>Beneficiaries__c.Concept_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>