force-app/main/default/objects/Concept_Note__c/fields/Location_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Project__c</fullName>
    <label>Location of Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>