force-app/main/default/objects/Concept_Note__c/fields/Logistics_Manager__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Manager__c</fullName>
    <label>Logistics Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>