force-app/main/default/objects/Concept_Note__c/fields/Needs_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Needs_Analysis__c</fullName>
    <label>Needs Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>