force-app/main/default/objects/Concept_Note__c/fields/Number_Of_Installment__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Installment__c</fullName>
    <inlineHelpText>Count of the Fund transfer schedule records related to Concept Note</inlineHelpText>
    <label>Number Of Installment</label>
    <summaryForeignKey>Fund_Transfer_Schedule__c.Concept_Note__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>