force-app/main/default/objects/Concept_Note__c/fields/Number_of_Reports__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reports__c</fullName>
    <inlineHelpText>Count of the report schedule records related to Concept Note</inlineHelpText>
    <label>Number of Reports</label>
    <summaryForeignKey>Report_Schedule__c.Concept_Note__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>