force-app/main/default/objects/Concept_Note__c/fields/Personnel_Cost_GBP__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Cost_GBP__c</fullName>
    <formula>Country_Director__c  +  Finance_Manager_Lead__c  +  Head_of_Programmes_Project_Manager__c  +  HR_Manager_Lead__c  +  Logistics_Manager__c  +  Remaining_Personnel_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Country Director,Finance Manager Lead,Head of Programmes Project Manager,HR Manager Lead,Logistics Manager and Remaining Personnel Cost</inlineHelpText>
    <label>Personnel Cost GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>