force-app/main/default/objects/Concept_Note__c/fields/Previous_Concept_Note__c.field-meta.xml
<CustomField>
    <fullName>Previous_Concept_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Concept from which the current concept note has been cloned</inlineHelpText>
    <label>Previous Concept Note</label>
    <referenceTo>Concept_Note__c</referenceTo>
    <relationshipLabel>Concept Notes</relationshipLabel>
    <relationshipName>Concept_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>