force-app/main/default/objects/Concept_Note__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <inlineHelpText>Unique Three digit code for Project, this code is also used to naming concept note name and project reference</inlineHelpText>
    <label>Project Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>