force-app/main/default/objects/Concept_Note__c/fields/Project_Completed_Report_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completed_Report_Submission_Date__c</fullName>
    <label>Project Completed Report Submission Date</label>
    <type>Date</type>
</CustomField>