force-app/main/default/objects/Concept_Note__c/fields/Project_Main_Activities__c.field-meta.xml
<CustomField>
    <fullName>Project_Main_Activities__c</fullName>
    <label>Project Main Activities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>