force-app/main/default/objects/Concept_Note__c/fields/Project_Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Planned_End_Date__c</fullName>
    <label>Project Planned End Date</label>
    <type>Date</type>
</CustomField>