force-app/main/default/objects/Concept_Note__c/fields/Project_Reference__c.field-meta.xml
<CustomField>
    <fullName>Project_Reference__c</fullName>
    <inlineHelpText>System Generated</inlineHelpText>
    <label>Project Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>