force-app/main/default/objects/Concept_Note__c/fields/Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Summary__c</fullName>
    <label>Project Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>