force-app/main/default/objects/Concept_Note__c/fields/Remaining_Personnel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Personnel_Cost__c</fullName>
    <label>Remaining Personnel Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>