force-app/main/default/objects/Concept_Note__c/fields/Remaining_Running_Costs__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Running_Costs__c</fullName>
    <label>Remaining Running Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>