force-app/main/default/objects/Concept_Note__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <label>Security</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>