force-app/main/default/objects/Concept_Note__c/fields/Specify_Timeframe_Limit__c.field-meta.xml
<CustomField>
    <fullName>Specify_Timeframe_Limit__c</fullName>
    <label>Specify Timeframe Limit (Months)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>