force-app/main/default/objects/Concept_Note__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Stages of Concept Note Approval, After Submitted Stage till the FA Signed this is controlled by aprroval process</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved-DC</fullName>
            </value>
            <value>
                <fullName>Approved-HoP</fullName>
            </value>
            <value>
                <fullName>Approved - Finance</fullName>
            </value>
            <value>
                <fullName>Approved-Donor</fullName>
            </value>
            <value>
                <fullName>FA-signed</fullName>
            </value>
            <value>
                <fullName>Project Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>