force-app/main/default/objects/Concept_Note__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Partially Successful</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>