force-app/main/default/objects/Concept_Note__c/fields/Thematic_Focus__c.field-meta.xml
<CustomField>
    <fullName>Thematic_Focus__c</fullName>
    <inlineHelpText>Primary theme for the Concept Note</inlineHelpText>
    <label>Thematic Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Livelihood</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Orphans &amp; Children</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>WASH</fullName>
            </value>
            <value>
                <fullName>Integrated Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>