force-app/main/default/objects/Concept_Note__c/fields/Total_Budget_Amount_in_GBP__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Amount_in_GBP__c</fullName>
    <formula>Direct_Charitable_Expenditure__c  +  Assets_and_Non_Capitalised_Assets__c  +  Personnel_Cost_GBP__c  +  Expenditure_Items_GBP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Direct Charitable Expenditure, Asset and Non Capitalised Assets , Pesonnel Cost and Expenditure Items</inlineHelpText>
    <label>Total Budget Amount in GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>