force-app/main/default/objects/Concept_Note__c/fields/Total_Budget_Exchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Exchange_Amount__c</fullName>
    <formula>Total_Budget_Amount_in_GBP__c *  Exchange_Rate_to_GBP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Budget Amount absed on the Exchange rate of the exchange currency</inlineHelpText>
    <label>Total Budget Exchange Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>