force-app/main/default/objects/Concept_Note__c/fields/Total_Funding_Required_GBP__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Required_GBP__c</fullName>
    <formula>Total_Budget_Amount_in_GBP__c + ( FO_Support__c *  Total_Budget_Amount_in_GBP__c ) + ( HQ_Support__c *  Total_Budget_Amount_in_GBP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Secondary themes for the Concept Notes</inlineHelpText>
    <label>Total Funding Required (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>