force-app/main/default/objects/Concept_Note__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <label>Transportation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>