force-app/main/default/objects/Concept_Note__c/fields/Withhold__c.field-meta.xml
<CustomField>
    <fullName>Withhold__c</fullName>
    <label>Withhold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>