force-app/main/default/objects/Concept_Note__c/recordTypes/Institutional_Concept_Note.recordType-meta.xml
<RecordType>
    <fullName>Institutional_Concept_Note</fullName>
    <active>true</active>
    <label>Institutional Concept Note</label>
</RecordType>