force-app/main/default/objects/Concept_Note__c/recordTypes/Institutional_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Institutional_Proposal</fullName>
    <active>true</active>
    <label>Institutional Proposal</label>
</RecordType>