force-app/main/default/objects/Concept_Note__c/validationRules/Not_allowed_stage_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_allowed_stage_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Stage__c),OR(ISPICKVAL(Stage__c,&apos;Approved-DC&apos;),ISPICKVAL(Stage__c,&apos;Approved-HoP&apos;),ISPICKVAL(Stage__c,&apos;Approved - Finance&apos;),
ISPICKVAL(Stage__c,&apos;Approved-Donor&apos;)))</errorConditionFormula>
    <errorMessage>The stage cannot be manually changed , Please submit for approval</errorMessage>
</ValidationRule>