force-app/main/default/objects/Concept_Note__c/validationRules/Project_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Dates_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNULL(Project_Planned_Start_Date__c),ISNULL(Project_Planned_End_Date__c)), NOT(ISPICKVAL( Stage__c ,&apos;Draft&apos;)))</errorConditionFormula>
    <errorMessage>Please Enter Project Planned Start and End Date</errorMessage>
</ValidationRule>