force-app/main/default/objects/Concept_Note__c/validationRules/Project_Report_Submission_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Report_Submission_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL(Project_Completed_Report_Submission_Date__c),NOT(ISPICKVAL( Stage__c ,&apos;Draft&apos;)))</errorConditionFormula>
    <errorMessage>Please Enter Project Completed Report Submission Date</errorMessage>
</ValidationRule>