force-app/main/default/objects/Concept_Note__c/validationRules/Specify_Timeframe_Limit_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Timeframe_Limit_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL( Specify_Timeframe_Limit__c ),NOT(ISPICKVAL( Stage__c ,&apos;Draft&apos;)))</errorConditionFormula>
    <errorMessage>Please Enter Specify Timeframe Limit</errorMessage>
</ValidationRule>