force-app/main/default/objects/Concept_Note__c/listViews/Concept_Note_Queue_Concept_Note.listView-meta.xml
<ListView>
    <fullName>Concept_Note_Queue_Concept_Note</fullName>
    <filterScope>Queue</filterScope>
    <label>Concept Note Queue</label>
    <queue>Concept_Note_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>